--- a/roguemodule/package.json
+++ b/roguemodule/package.json
@@ -13,7 +13,8 @@
     "@hapi/hapi": "^18.4.0",
     "camaro": "^4.1.2",
     "easy-soap-request": "^3.2.0",
-    "hapi": "^18.1.0"
+    "hapi": "^18.1.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
