--- a/commission/package.json
+++ b/commission/package.json
@@ -33,11 +33,13 @@
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "bodymen": "^1.1.0",
+    "camaro": "^4.1.2",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^6.2.0",
     "dotenv-safe": "^6.1.0",
+    "easy-soap-request": "^3.2.0",
     "hapi": "^18.1.0",
     "jsonwebtoken": "^8.4.0",
     "loadash": "^1.0.0",
